--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
 		"vitest": "^3.0.0"
 	},
 	"dependencies": {
-		"@inlang/paraglide-js": "^2.0.0"
+		"@inlang/paraglide-js": "^2.0.0",
+		"plotly": "^1.0.6"
 	}
 }
