--- a/bin/docker/Caddyfile.jsonc
+++ b/bin/docker/Caddyfile.jsonc
@@ -3,69 +3,70 @@
         "disabled": true
     },
     "logging":{
-        "sink":{
-            "writer":{
-                "output":"stdout"
-            }
-
-        },
-        "logs":{
-            "default":{                
-                "writer":{
-                    "output":"stdout"
-                },
-                "encoder":{
-                    "format": "console"
-                },
-                "level": "INFO"
-            }
-        }
+		"sink": {
+			"writer": {"output": "stdout"}
+		},
+		"logs": {"default": {
+			"writer": {"output": "stdout"},
+			"encoder": {"format": "console"},
+			"level": "INFO"
+		}}
     },
     "apps":{
-        "http":{
-            "servers":{
-                "ShallowView":{
-                    "listen":[":80"],
-                    "routes":[
-                        {
-                            "handle":[
-                                {
-                                    "handler":"vars",
-                                    "servername":"ShallowView",
-                                    "root": "{env.CYROOT}"
-                                },
-                                {
-                                    "handler":"headers",
-                                    "response":{
-                                        "set":{
-                                            "Server":["{http.vars.servername}"]
-                                        }
-                                    }
-                                }
-                            ]
-                        },
-                        {
-                            "match":[{
-                                "host":["shallowview.org"]
-                            }],
-                            "handle":[{"handler":"file_server", "root":"{http.vars.root}/master"}]
-                        },
-                        {
-                            "match":[{
-                                "host":["doc.shallowview.org"]
-                            }],
-                            "handle":[{"handler":"file_server", "root":"{http.vars.root}/doc"}]
-                        },
-                        {
-                            "match":[{
-                                "host":["api.shallowview.org"]
-                            }],
-                            "handle":[{"handler":"file_server", "root":"{http.vars.root}/api"}]
-                        }
-                    ]
-                }
-            }
+        "http":{"servers":{"ShallowView":{
+			"listen":[":80"],
 
-        }
-    }
+			"routes":[
+				{
+					"handle":[
+						{
+							"handler":"vars",
+							"servername":"ShallowView",
+							"root": "{env.CYROOT}"
+						},
+						{
+							"handler":"headers",
+							"response":{
+								"set":{"Server":["{http.vars.servername}"]}
+							}
+						}
+					]
+				},
+
+				{
+					"match":[{
+						"host":["shallowview.org"]
+					}],
+					"handle":[{
+						"handler":"file_server",
+						"root":"{http.vars.root}/master"
+					}]
+				},
+				{
+					"match":[{
+						"host":["doc.shallowview.org"]
+					}],
+					"handle":[{
+						"handler":"file_server", "root":"{http.vars.root}/doc"
+					}]
+				},
+				{
+					"match":[{
+						"host":["api.shallowview.org"]
+					}],
+					"handle":[{
+						"handler":"file_server", "root":"{http.vars.root}/api"
+					}]
+				},
+
+				{
+					"handle": [{
+						"handler": "static_response",
+						"status_code": "403",
+						"body": "You need to specify a domain name as the host."
+					}]
+				}
+			]
+		}
+    }}}
 }
