--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,28 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
+			"group": "build",
+			"label": "Compile docs",
+			"detail": "Bundle OpenAPI specs and copy SwaggerUI docs to out/doc",
+			"icon": {
+				"id": "symbol-interface"
+			},
+			"type": "shell",
+
+			"linux": { "command": "bash" },
+			"args": [
+				"bin/compileDocs.sh",
+				"backend/resource/specification/openapi-shallowview.yaml",
+				"backend/resource/public/doc"
+			],
+
+			"presentation": {
+				"reveal": "silent",
+				"showReuseMessage": false,
+				"clear": true
+			}
+		},
+		{
             "group": "test",
             "label": "Launch API",
             "detail": "Start PHP's builtin web server on 127.0.0.1:31900 to backend/resource/public.",
