--- a/bin/docker/Dockerfile
+++ b/bin/docker/Dockerfile
@@ -3,6 +3,27 @@ FROM caddy:2.10.0-builder-alpine AS builder
 RUN xcaddy build \
     --with github.com/caddyserver/jsonc-adapter
 
+FROM node:24.0.2-alpine3.21 AS node-base
+
+ENV SOURCES_ROOT=/usr/src/webservices
+
+COPY ./ $SOURCES_ROOT
+WORKDIR $SOURCES_ROOT
+
+# Frontend
+FROM node-base AS frontend
+
+RUN npm install --verbose
+RUN npm run build -w frontend
+
+# Doc
+FROM node-base AS doc
+
+RUN sh bin/compileDocs.sh \
+	backend/resource/specification/openapi-shallowview.yaml \
+	backend/resource/public/doc
+
+# Final
 FROM caddy:2.10.0-alpine
 
 ARG DOCKER_FILES_ROOT=bin/docker
@@ -15,12 +36,17 @@ COPY --from=builder /usr/bin/caddy /usr/bin/caddy
 
 COPY $DOCKER_FILES_ROOT/Caddyfile.jsonc $CYCONFIG
 
+# Copies service files.
 RUN rm ${CYROOT}/index.html
+RUN mkdir -p $CYROOT/master $CYROOT/api $CYROOT/doc
 
-RUN mkdir -p $CYROOT/doc $CYROOT/api $CYROOT/master
-RUN echo "apidoc">$CYROOT/doc/index.html
-RUN echo "api">$CYROOT/api/index.html
-COPY frontend/build $CYROOT/master
+COPY --from=frontend /usr/src/webservices/frontend/build $CYROOT/master
+
+COPY backend/lib/ $CYROOT/api/lib/
+COPY backend/resource/ $CYROOT/api/resource/
+COPY backend/src/ $CYROOT/api/src/
+
+COPY --from=doc /usr/src/webservices/out/doc/ $CYROOT/doc/
 
 # Unpriviliged user
 RUN addgroup -S $CYUSER
